--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -9,6 +9,46 @@
   <body>
     <h1>Ejercicio 1</h1>
     <hr />
+    <main>
+        <h1>Curriculum Vitae de Lionel Messi</h1>
+        <section>
+            <Div>
+                <h2>Datos Personales</h2>
+            </Div>
+            <div>
+                <ul>
+                    <li>Nombre completo: <strong>Lionel Andrés Messi Cuccittini</strong></li>
+                    <li>Fecha de nacimiento: <strong>24/6/1987</strong></li>
+                    <li>Lugar de nacimiento: <strong> Rosario - Argentina</strong> </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <Div>
+                <h2>Trayectoria</h2>
+            </Div>
+            <div>
+                <ul>
+                    <li>1994-1999: <strong>Newell's Old Boys (Inferiores)</strong></li>
+                    <li>2000-2021: <strong>Barcelona F.C</strong></li>
+                    <li>2021-2023: <strong>Paris Saint Germain</strong></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <Div>
+                <h2>Títulos con la Selección</h2>
+            </Div>
+            <div>
+                <ul>
+                    <li>2021: <strong>Copa América Brasil 2021</strong></li>
+                    <li>2022: <strong>Finalissima</strong></li>
+                    <li>2022: <strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <hr>
     <a href="/index.html">Volver</a>
   </body>
 </html>
