Add section ej2

--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -9,6 +9,35 @@
   <body>
     <h1>Ejercicio 2</h1>
     <hr />
+    <main>
+        <section>
+            <h1>Programación Web Full Stack</h1>
+            <h2>Módulos de la cursada</h2>
+            <div>
+                <ol>
+                    <li>Diseño Web:</li>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Git y Github</li>
+                    </ul>
+                    <li>Programación Web:</li>
+                    <ul>
+                        <li>Javascript</li>
+                    </ul>
+                    <li>Programación Web Avanzada:</li>
+                    <ul>
+                        <li>ReactJs</li>
+                    </ul>
+                    <li>Backend:</li>
+                    <ul>
+                        <li>NodeJs</li>
+                        <li>Base de datos</li>
+                    </ul>
+                </ol>
+            </div>
+        </section>
+    </main>
     <a href="/index.html">Volver</a>
   </body>
 </html>
