--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -10,33 +10,79 @@
     <h1>Ejercicio 2</h1>
     <hr />
     <main>
-        <section>
-            <h1>Programación Web Full Stack</h1>
-            <h2>Módulos de la cursada</h2>
+      <header>
+        <h1>Programación Web Full Stack</h1>
+      </header>
+      <section>
+        <div>
+          <h2>Módulos de la cursada</h2>
+        </div>
+        <div>
+          <ol>
+            <li>Diseño Web:</li>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Git y Github</li>
+            </ul>
+            <li>Programación Web:</li>
+            <ul>
+              <li>Javascript</li>
+            </ul>
+            <li>Programación Web Avanzada:</li>
+            <ul>
+              <li>ReactJs</li>
+            </ul>
+            <li>Backend:</li>
+            <ul>
+              <li>NodeJs</li>
+              <li>Base de datos</li>
+            </ul>
+          </ol>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h2>Modalidad de la cursada</h2>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <strong>Contenidos en vivo:</strong>
+            </li>
             <div>
-                <ol>
-                    <li>Diseño Web:</li>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Git y Github</li>
-                    </ul>
-                    <li>Programación Web:</li>
-                    <ul>
-                        <li>Javascript</li>
-                    </ul>
-                    <li>Programación Web Avanzada:</li>
-                    <ul>
-                        <li>ReactJs</li>
-                    </ul>
-                    <li>Backend:</li>
-                    <ul>
-                        <li>NodeJs</li>
-                        <li>Base de datos</li>
-                    </ul>
-                </ol>
+              <ul>
+                <li>Clases online en zoom</li>
+                <li>Meetups</li>
+                <li>Clases de repaso</li>
+              </ul>
             </div>
-        </section>
+          </ul>
+        </div>
+        <ul>
+          <li>
+            <strong>Contenido Teórico-práctico</strong>
+          </li>
+          <div>
+            <ul>
+              <li>
+                Teórico:
+                <ul>
+                  <li>Documentaciones</li>
+                  <li>Articulos de interes</li>
+                </ul>
+              </li>
+              <li>
+                Práctico:
+                <ul>
+                  <li>Desafios</li>
+                  <li>Entregas</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </ul>
+      </section>
     </main>
     <a href="/index.html">Volver</a>
   </body>
