--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -7,8 +7,76 @@
     <title>Ejercicio3</title>
   </head>
   <body>
-    <h1>Ejercicio 3</h1>
+    <header>
+      <h1>Ejercicio 3</h1>
+    </header>
     <hr />
-    <a href="/index.html">Volver</a>
+    <main>
+      <form>
+      <section>
+        <h1>Formulario de registro</h1>
+          <div>
+            <label for="name">Nombre</label>
+            <input type="text" id="name" placeholder="Matias" name="name" />
+          </div>
+          <br />
+          <div>
+            <label for="apellido">Apellido</label>
+            <input
+              type="text"
+              id="apellido"
+              placeholder="Rearte"
+              name="apellido"
+            />
+          </div>        
+      </section>
+      <br />
+      <section>        
+          <div>
+            <label>Modalidad de Cursada: </label>
+            <input type="radio" id="ondemand" name="modalidad" />
+            <label for="ondemand">On-Demand</label>
+            <input type="radio" id="en vivo" name="modalidad" />
+            <label for="en vivo"> En vivo</label>
+          </div>       
+      </section>
+      <br />
+      <section>        
+          <div>
+            <label for="email">Correo</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="@"
+              name="email"
+              required
+            />
+          </div>       
+      </section>
+      <br />
+      <section>       
+          <div>
+            <input type="checkbox" name="spam" id="spam" />
+            <label for="spam"
+              >Deseo recibir información sobre nuevos posteos en la plataforma
+              Nucba.</label
+            >
+          </div>
+          <br />
+          <div>
+            <input type="checkbox" name="terminos" id="terminos" required />
+            <label for="terminos"
+              >Declaro que lei los terminos y condiciones y estoy listo para
+              convertirme en desarrollador Full Stack.</label>
+          </div>
+          <br />
+          <input type="submit" value="Enviar" />
+        </section>
+      </form>
+    </main>
+    <footer>
+      <br />
+      <a href="/index.html">Volver</a>
+    </footer>
   </body>
 </html>
