--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -49,6 +49,9 @@
         </section>
     </main>
     <hr>
-    <a href="/index.html">Volver</a>
+    <footer>
+        <br />
+        <a href="/index.html">Volver</a>
+      </footer>
   </body>
 </html>
