--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -86,6 +86,10 @@
         </ul>
       </section>
     </main>
-    <a href="/index.html">Volver</a>
+    <hr>
+    <footer>
+        <br />
+        <a href="/index.html">Volver</a>
+      </footer>
   </body>
 </html>
