--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -13,8 +13,8 @@
     <hr />
     <main>
       <form>
-      <section>
-        <h1>Formulario de registro</h1>
+        <section>
+          <h1>Formulario de registro</h1>
           <div>
             <label for="name">Nombre</label>
             <input type="text" id="name" placeholder="Matias" name="name" />
@@ -28,20 +28,20 @@
               placeholder="Rearte"
               name="apellido"
             />
-          </div>        
-      </section>
-      <br />
-      <section>        
+          </div>
+        </section>
+        <br />
+        <section>
           <div>
             <label>Modalidad de Cursada: </label>
             <input type="radio" id="ondemand" name="modalidad" />
             <label for="ondemand">On-Demand</label>
             <input type="radio" id="en vivo" name="modalidad" />
             <label for="en vivo"> En vivo</label>
-          </div>       
-      </section>
-      <br />
-      <section>        
+          </div>
+        </section>
+        <br />
+        <section>
           <div>
             <label for="email">Correo</label>
             <input
@@ -51,10 +51,10 @@
               name="email"
               required
             />
-          </div>       
-      </section>
-      <br />
-      <section>       
+          </div>
+        </section>
+        <br />
+        <section>
           <div>
             <input type="checkbox" name="spam" id="spam" />
             <label for="spam"
@@ -67,15 +67,16 @@
             <input type="checkbox" name="terminos" id="terminos" required />
             <label for="terminos"
               >Declaro que lei los terminos y condiciones y estoy listo para
-              convertirme en desarrollador Full Stack.</label>
+              convertirme en desarrollador Full Stack.</label
+            >
           </div>
           <br />
           <input type="submit" value="Enviar" />
         </section>
       </form>
-      <br>
+      <br />
     </main>
-    <hr>    
+    <hr />
     <footer>
       <br />
       <a href="/index.html">Volver</a>
