--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <title>Entrega 1</title>
   </head>
   <body>
-    <section>
-      <h1>Trabajo de entrega 1</h1>
-      <div>
-        <ul>
-          <li><a href="/ejercicio1.html">Ejercicio1</a></li>
-          <li><a href="/ejercicio2.html">Ejercicio2</a></li>
-          <li><a href="/ejercicio3.html">Ejercicio3</a></li>
-        </ul>
+    <header>
+      <h1>E1: Forms y Listas</h1>
+    </header>
+    <section>     
+          <ul>
+            <li><a href="/ejercicio1.html">Ejercicio1</a></li>
+            <li><a href="/ejercicio2.html">Ejercicio2</a></li>
+            <li><a href="/ejercicio3.html">Ejercicio3</a></li>
+          </ul>       
       </div>
     </section>
   </body>
