add placeholder ej3

--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -47,7 +47,7 @@
             <input
               type="email"
               id="email"
-              placeholder="@"
+              placeholder="tuki@gmail.com"
               name="email"
               required
             />
