--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -64,7 +64,8 @@
           <li>
             <strong>Contenido Teórico-práctico</strong>
           </li>
-          <br />
+          <br /> 
+          <!-- Profe no supe otra manera de generar un espacio entre los divs mas que con un br -->
           <div>
             <ul>
               <li>
