--- a/ejercicio3.html
+++ b/ejercicio3.html
@@ -76,6 +76,7 @@
       </form>
       <br />
     </main>
+    <!-- Profe en este ejercicio tambien use varias veces br, no supe otra forma de generar espacios -->
     <hr />
     <footer>
       <br />
