--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>E1: Forms y Listas</h1>
+      <h1>E1: Forms y Listas</h1>      
     </header>
     <section>     
           <ul>
@@ -18,5 +18,9 @@
           </ul>       
       </div>
     </section>
+    <footer>
+      <p>// Trabajo realizado por Matias Rearte &#129299 //</p>
+      <!-- Quise personalizar un poco la pagina con un emoji que encontre en internet xD -->
+    </footer>
   </body>
 </html>
