--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -34,6 +34,7 @@
             <li>1994-1999: <strong>Newell's Old Boys (Inferiores)</strong></li>
             <li>2000-2021: <strong>Barcelona F.C</strong></li>
             <li>2021-2023: <strong>Paris Saint Germain</strong></li>
+            <!-- Datos de ultimo momento> 2023-actualidad: Inter Miami CF -->
           </ul>
         </div>
       </section>
